--- a/main.html
+++ b/main.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
+    <title>Hello World Page</title>
 </head>
-
 <body>
-	<!-- PLease only edit this file for this asssignment. Thanks!-->
-	<h1>Hello </h1>
+    <!-- Please only edit this file for this assignment. Thanks! -->
+    <h1>Hello World</h1>
 </body>
-
 </html>
